--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include 'rps'
 include 'kodilla-exception'
 include 'games'
 include 'kodilla-good-patterns'
-
+include 'spring'
+include 'kodilla-spring'
+include 'kodilla-spring-web'
