--- a/kodilla-patterns/build.gradle
+++ b/kodilla-patterns/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.testng:testng:7.1.0'
+    implementation 'org.mozilla.taskcluster:taskcluster-client:1.0.311'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.4.0'
