--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,6 @@ include 'spring'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
+include 'kodilla-jdbc'
+include 'kodilla-hibernate'
 
