--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include 'kodilla-testing'
 include 'kodilla-stream2'
 include 'rps'
 include 'kodilla-exception'
-include 'games'
+//include 'games'
 include 'kodilla-good-patterns'
 include 'spring'
 include 'kodilla-spring'
@@ -11,4 +11,6 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
+include 'kodilla-patterns2'
+
 
