--- a/kodilla-hibernate/build.gradle
+++ b/kodilla-hibernate/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+
 	id 'org.springframework.boot'
 	id 'io.spring.dependency-management'
 	id 'java'
@@ -14,15 +15,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
-	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
-	// https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
-	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'junit:junit:4.13.2'
+	testImplementation('org.springframework.boot:spring-boot-starter-test'){
+		exclude group: 'org.junit.vintage', module: 'junit-vinage-engine'
+	}
+
+
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
